Be definitive in the ##fileformat section
This section specifies ##fileformat, not just gives an example.

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -91,10 +91,10 @@ which must come first.}
 
 
 \subsubsection{File format}
-A single `fileformat' field is always required, must be the first line in the file, and details the VCF format version number. For example, for VCF version 4.2, this line should read:
+A single `fileformat' line is always required, must be the first line in the file, and details the VCF format version number. For VCF version 4.3, this line should read:
 
 \begin{verbatim}
-##fileformat=VCFv4.2
+##fileformat=VCFv4.3
 \end{verbatim}
 
 {\color{red}
