--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -84,7 +84,18 @@ encouraged to include meta-information lines describing the entries used in the
 body of the VCF file.
 
 All structured lines that have their value enclosed within "$<>$" require an ID
-which must be unique within their type.
+which must be unique within their type. For all of the structured lines (\#\#INFO, \#\#FORMAT,
+\#\#FILTER, etc.), extra fields can be included after the default fields. For example:
+\begin{verbatim}
+##INFO=<ID=ID,Number=number,Type=type,Description="description",Source="description",Version="128">
+\end{verbatim}
+In the above example, the extra fields of ``Source'' and ``Version'' are
+provided. Optional fields should be stored as strings even for numeric values.
+
+It is highly recommended (but not required) that the header
+include tags describing the reference and contigs backing the data contained in
+the file.  These tags are based on the SQ field from the SAM spec; all tags are
+optional (see the VCF example above).
 
 Meta-information lines can be in any order with the exception of `fileformat`
 which must come first.}
@@ -173,12 +184,17 @@ Likewise, Genotype fields specified in the FORMAT field should be described as f
 Possible Types for FORMAT fields are: Integer, Float, Character, and String (this field is otherwise defined precisely as the INFO field).
 
 \subsubsection{Alternative allele field format}
-Symbolic alternate alleles for imprecise structural variants:
-
+Symbolic alternate alleles should be described as follows:
 \begin{verbatim}
 ##ALT=<ID=type,Description=description>
 \end{verbatim}
-The ID field indicates the type of structural variant, and can be a colon-separated list of types and subtypes. ID values are case sensitive strings and may not contain whitespace or angle brackets. The first level type must be one of the following:
+
+\noindent \textbf{Structural Variants} \newline
+In symbolic alternate alleles for imprecise structural variants,
+the ID field indicates the type of structural variant, and can be a
+colon-separated list of types and subtypes. ID values are case sensitive
+strings and may not contain whitespace or angle brackets. The first level type
+must be one of the following:
 \begin{itemize}
   \item DEL Deletion relative to the reference
   \item INS Insertion of novel sequence relative to the reference
@@ -194,14 +210,17 @@ The CNV category should not be used when a more specific category can be applied
   \item INS:ME Insertion of a mobile element relative to the reference
 \end{itemize}
 
-In addition, it is highly recommended (but not required) that the header include tags describing the reference and contigs backing the data contained in the file.  These tags are based on the SQ field from the SAM spec; all tags are optional (see the VCF example above).
+\bigskip
 
-For all of the \#\#INFO, \#\#FORMAT, \#\#FILTER, and \#\#ALT metainformation, extra fields can be included after the default fields. For example:
-
+{\color{red}
+\noindent \textbf{IUPAC ambiguity codes} \newline
+Symbolic alleles can be used also to represent genuinely ambiguous data in VCF, for example:
 \begin{verbatim}
-##INFO=<ID=ID,Number=number,Type=type,Description="description",Source="description",Version="128">
+    ##ALT=<ID=R,Description="IUPAC code R = A/G">
+    ##ALT=<ID=M,Description="IUPAC code M = A/C">
 \end{verbatim}
-In the above example, the extra fields of ``Source'' and ``Version'' are provided. Optional fields should be stored as strings even for numeric values.
+}
+
 
 \subsubsection{Assembly field format}
 Breakpoint assemblies for structural variations may use an external file:
@@ -279,7 +298,29 @@ missing values are specified with a dot (`.'). Fixed fields are:
   \item CHROM - chromosome: An identifier from the reference genome or an angle-bracketed ID String (``$<$ID$>$'') pointing to a contig in the assembly file (cf. the \#\#assembly line in the header). All entries for a specific CHROM should form a contiguous block within the VCF file. The colon symbol (:) must be absent from all chromosome names to avoid parsing errors when dealing with breakends. (String, no white-space permitted, Required).
   \item POS - position: The reference position, with the 1st base having position 1. Positions are sorted numerically, in increasing order, within each reference sequence CHROM.   It is permitted to have multiple records with the same POS. Telomeres are indicated by using positions 0 or N+1, where N is the length of the corresponding chromosome or contig.   (Integer, Required)
   \item ID - identifier: Semi-colon separated list of unique identifiers where available. If this is a dbSNP variant it is encouraged to use the rs number(s). No identifier should be present in more than one data record. If there is no identifier available, then the missing value should be used. (String, no white-space or semi-colons permitted, {\color{red}duplicate values not allowed.})
-  \item REF - reference base(s): Each base must be one of A,C,G,T,N (case insensitive). Multiple bases are permitted. The value in the POS field refers to the position of the first base in the String. For simple insertions and deletions in which either the REF or one of the ALT alleles would otherwise be null/empty, the REF and ALT Strings must include the base before the event (which must be reflected in the POS field), unless the event occurs at position 1 on the contig in which case it must include the base after the event; this padding base is not required (although it is permitted) for e.g. complex substitutions or other events where all alleles have at least one base represented in their Strings.  If any of the ALT alleles is a symbolic allele (an angle-bracketed ID String ``$<$ID$>$'') then the padding base is required and POS denotes the coordinate of the base preceding the polymorphism. Tools processing VCF files are not required to preserve case in the allele Strings. (String, Required).
+  \item REF - reference base(s): Each base must be one of A,C,G,T,N (case
+  insensitive). Multiple bases are permitted. The value in the POS field refers
+  to the position of the first base in the String. For simple insertions and
+  deletions in which either the REF or one of the ALT alleles would otherwise
+  be null/empty, the REF and ALT Strings must include the base before the event
+  (which must be reflected in the POS field), unless the event occurs at
+  position 1 on the contig in which case it must include the base after the
+  event; this padding base is not required (although it is permitted) for e.g.
+  complex substitutions or other events where all alleles have at least one
+  base represented in their Strings.  If any of the ALT alleles is a symbolic
+  allele (an angle-bracketed ID String ``$<$ID$>$'') then the padding base is
+  required and POS denotes the coordinate of the base preceding the
+  polymorphism. Tools processing VCF files are not required to preserve case in
+  the allele Strings. (String, Required).
+
+  {\color{red}
+  If the reference sequence contains IUPAC ambiguity codes not
+  allowed by this specification (such as R = A/G), the ambiguous reference base 
+  can be reduced to a concrete base by using the one that is first alphabetically
+  (thus R as a reference base is converted to A in VCF.)
+  }
+
+
   \item ALT - alternate base(s): Comma separated list of alternate non-reference alleles called on at least one of the samples. Options are base Strings made up of the bases A,C,G,T,N,*, (case insensitive) or an angle-bracketed ID String (``$<$ID$>$'') or a breakend replacement string as described in the section on breakends. The `*' allele is reserved to indicate that the allele is missing due to a upstream deletion. If there are no alternative alleles, then the missing value should be used.  Tools processing VCF files are not required to preserve case in the allele String, except for IDs, which are case sensitive.  (String; no whitespace, commas, or angle-brackets are permitted in the ID String itself)
   \item QUAL - quality: Phred-scaled quality score for the assertion made in ALT. i.e. $-10log_{10}$ prob(call in ALT is wrong). If ALT is `.' (no variant) then this is $-10log_{10}$ prob(variant), and if ALT is not `.' this is $-10log_{10}$ prob(no variant). If unknown, the missing value should be specified. (Float)
   \item FILTER - filter status: PASS if this position has passed all filters, i.e. a call is made at this position. Otherwise, if the site has not passed all filters, a semicolon-separated list of codes for filters that fail. e.g. ``q10;s50'' might indicate that at this site the quality is below 10 and the number of samples with data is below 50\% of the total number of samples. `0' is reserved and should not be used as a filter String. If filters have not been applied, then this field should be set to the missing value. (String, no white-space or semi-colons permitted, {\color{red}duplicate values not allowed.})
@@ -1828,6 +1869,8 @@ with "$<$" must have an ID field. Therefore, also \#\#PEDIGREE newly requires a 
 \item New reserved AD, ADF, and ADR INFO and FORMAT fields added.
 \item Removed unused and ill-defined GLE FORMAT tag.
 \item Chromosome names cannot use reserved symbolic alleles and contain characters used by breakpoints (Section~\ref{sec-contig-field}).
+\item IUPAC ambiguity codes should be converted to a concrete base.
+\item Symbolic ALTs for IUPAC codes.
 \end{itemize}
 
 \subsection{Changes between BCFv2.1 and BCFv2.2}
