Added BB and QQ to the data series encoding table (8.4).

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -609,6 +609,10 @@ BA & encoding\texttt{<}byte\texttt{>} & bases & bases\tabularnewline
 \hline
 QS & encoding\texttt{<}byte\texttt{>} & quality scores & quality scores\tabularnewline
 \hline
+BB & encoding\texttt{<}byte[ ]\texttt{>} & stretches of bases & bases\tabularnewline
+\hline
+QQ & encoding\texttt{<}byte[ ]\texttt{>} & stretches of quality scores & quality scores\tabularnewline
+\hline
 FC & encoding\texttt{<}byte\texttt{>} & read features codes & see separate section\tabularnewline
 \hline
 FN & encoding\texttt{<}int\texttt{>} & number of read features & number of read 
